[package]
name = "maplibre-legend"
version = "0.1.3"
edition = "2024"
authors = ["Jose Jachuf <jjachuf@gmail.com>"]
description = "A library that dynamically generates layer legends based on the information in a MapLibre style.json file."
license = "BSD-3-Clause"
repository = "https://github.com/mvt-proj/maplibre-legend"
readme = "README.md"
keywords = ["rust", "maplibre", "legend", "style-json"]
categories = ["visualization", "graphics", "web-programming"]

[dependencies]
svg = "0.18.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0"

reqwest = { version = "0.12", features = ["blocking", "json"] }
image = "0.25"
base64 = "0.22"
